objects/Studies_Sites_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Contact_First_Name__c</fullName>
        <formula>Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Full_Name__c</fullName>
        <label>Contact Full Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Last_Name__c</fullName>
        <formula>Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <displayFormat>TSC-{00000}</displayFormat>
        <label>Contact Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Trial Site Contacts</relationshipLabel>
        <relationshipName>Studies_Sites_Contacts_del</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <inlineHelpText>Copied from the Trial Site Contact&apos;s contact record, but can be edited.</inlineHelpText>
        <label>Email</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <inlineHelpText>Copied from the Trial Site Contact&apos;s contact record, but can be edited.</inlineHelpText>
        <label>Fax</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Email__c</fullName>
        <description>Hidden field that stores the values from the Contact record</description>
        <label>Hidden Email</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Fax__c</fullName>
        <description>Hidden field that stores the values from the Contact record</description>
        <label>Hidden Fax</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Phone__c</fullName>
        <description>Hidden field that stores the values from the Contact record</description>
        <label>Hidden Phone</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Samples_Contact__c</fullName>
        <formula>Contact__r.Number_of_Samples__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of Samples (not match records) submitted by this contact</inlineHelpText>
        <label>Number of Samples-Contact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PTC_Connection_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This opts the contact into receiving PTC Emails from Yuzu.</inlineHelpText>
        <label>PTC Connection Opt-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <inlineHelpText>Copied from the Trial Site Contact&apos;s contact record, but can be edited.</inlineHelpText>
        <label>Phone</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Site_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Site Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site_Contact_Type__c</fullName>
        <label>Site Contact Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Principal Investigator</fullName>
                </value>
                <value>
                    <fullName>Site Coordinator</fullName>
                </value>
                <value>
                    <fullName>Sub-Investigator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Study_List__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; Study_Sites__r.Study__r.Id,Study_Sites__r.Study__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Study Name</inlineHelpText>
        <label>Trial Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Study_Sites__c</fullName>
        <label>Trial Site</label>
        <referenceTo>Study_Site__c</referenceTo>
        <relationshipLabel>Trial Site Contacts</relationshipLabel>
        <relationshipName>Studies_Sites_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Trial_Code__c</fullName>
        <formula>Study_Sites__r.Study__r.Trial_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trial Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trial_name__c</fullName>
        <formula>Study_Sites__r.Study__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>hidden field used for reports. Removes the HTML formatting from &apos;Trial Name&apos;. Note the second word of this field label is NOT capitalized.</inlineHelpText>
        <label>Trial name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>update</label>
        <type>Checkbox</type>
    </fields>
    <label>Trial Site Contact</label>
    <listViews>
        <fullName>All_Trial_Site_Contacts</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Study_List__c</columns>
        <columns>Study_Sites__c</columns>
        <columns>Site_Contact_Type__c</columns>
        <columns>Email__c</columns>
        <columns>Fax__c</columns>
        <columns>Phone__c</columns>
        <columns>Contact_Number__c</columns>
        <columns>Trial_Code__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Trial Site Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EMERALD_Trial_Site_Contacts</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Contact__c</columns>
        <columns>Email__c</columns>
        <columns>Fax__c</columns>
        <columns>Phone__c</columns>
        <columns>Study_Sites__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Trial_Code__c</field>
            <operation>equals</operation>
            <value>RAD1901</value>
        </filters>
        <label>EMERALD Trial Site Contacts</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Trial Site Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trial Site Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>